[build-system]
requires = ["setuptools >= 46.1.0", "wheel >= 0.34.2", "pep517 >= 0.8.2"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "asyncio-telnet"
version = "0.1.0"
description = "Asyncio-based Telnet library"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
asyncio = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
